--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+/**
+ * Modified by Serhii Ovsiuk for compatibility with orientDb v.2.1.12
+ */
+
 buildscript {
     repositories {
         mavenCentral()
@@ -14,84 +18,90 @@ apply plugin: 'eclipse'
 //apply plugin: 'groovy'
 
 repositories {
-  mavenLocal()
-  jcenter()
-  mavenCentral()
-  maven {
-   url "https://repos.inhabitech.com:8082/repository/smartspaces-io"
-  }
+    mavenLocal()
+    jcenter()
+    mavenCentral()
+    maven {
+        url "https://repos.inhabitech.com:8082/repository/smartspaces-io"
+    }
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 group='io.smartspaces'
 version =  '0.3.0-SNAPSHOT'
 
 ext {
-	osgiVersion = "0.3.0.SNAPSHOT"
+    osgiVersion = "0.3.0.SNAPSHOT"
 }
 
 dependencies {
-  compile('org.apache.servicemix.bundles:org.apache.servicemix.bundles.quartz:2.1.7_1') {
-    exclude group: 'c3p0', module: 'c3p0'
-    transitive = false
-  }
-  
-  compile("org.apache.commons:com.springsource.org.apache.commons.codec:1.4.0")
-  compile("org.slf4j:slf4j-api:1.7.10")
+    compile('org.apache.servicemix.bundles:org.apache.servicemix.bundles.quartz:2.1.7_1') {
+        exclude group: 'c3p0', module: 'c3p0'
+        transitive = false
+    }
 
-  compile('com.orientechnologies:orientdb-core:2.2.18')	
-  compile('com.orientechnologies:orientdb-client:2.2.18')	
-  compile('com.orientechnologies:orientdb-server:2.2.18') {
-    exclude group: 'javax.mail', module: 'mail'
-    transitive = false
-  }	
-  //compile('com.orientechnologies:orientdb-enterprise:2.2.7')
+    compile("org.apache.commons:com.springsource.org.apache.commons.codec:1.4.0")
+    compile("org.slf4j:slf4j-api:1.7.10")
 
-  runtime("org.slf4j:slf4j-jdk14:1.7.10")
+    compile('com.orientechnologies:orientdb-core:2.1.12')
+    compile('com.orientechnologies:orientdb-client:2.1.12')
+    compile('com.orientechnologies:orientdb-server:2.1.12') {
+        exclude group: 'javax.mail', module: 'mail'
+        transitive = false
+    }
+    //compile('com.orientechnologies:orientdb-enterprise:2.2.7')
 
-  //testCompile("joda-time:joda-time:2.8.2")
-  //testCompile("org.slf4j:slf4j-simple:1.7.10")
-  //testCompile("org.codehaus.groovy:groovy-all:2.4.1")
-  //testCompile("org.spockframework:spock-core:1.0-groovy-2.4")
-  //testRuntime("cglib:cglib-nodep:3.1")
-  //testRuntime("org.objenesis:objenesis:2.1")
+    runtime("org.slf4j:slf4j-jdk14:1.7.10")
+
+    //testCompile("joda-time:joda-time:2.8.2")
+    //testCompile("org.slf4j:slf4j-simple:1.7.10")
+    //testCompile("org.codehaus.groovy:groovy-all:2.4.1")
+    //testCompile("org.spockframework:spock-core:1.0-groovy-2.4")
+    //testRuntime("cglib:cglib-nodep:3.1")
+    //testRuntime("org.objenesis:objenesis:2.1")
 }
 
 artifacts {
-  archives jar
+    archives jar
 }
 
 jar {
-  baseName = 'quartz-orientdb'
+    baseName = 'quartz-orientdb'
 
-  manifest {
-	version = osgiVersion
-	symbolicName = 'quartz.orientdb'
-	
-    instruction 'Export-Package',
-      '!io.smartspaces.scheduling.quartz.orientdb.internal.*',
-      'io.smartspaces.scheduling.quartz.orientdb.*'
-		  
-    instruction 'Private-Package',
-      'io.smartspaces.scheduling.quartz.orientdb.internal.*'
+    manifest {
+        version = osgiVersion
+        symbolicName = 'quartz.orientdb'
 
-    instruction 'Import-Package',
-      '*'
-  }
+        instruction 'Export-Package',
+                '!io.smartspaces.scheduling.quartz.orientdb.internal.*',
+                'io.smartspaces.scheduling.quartz.orientdb.*'
+
+        instruction 'Private-Package',
+                'io.smartspaces.scheduling.quartz.orientdb.internal.*'
+
+        instruction 'Import-Package',
+                '*'
+    }
 }
 
 uploadArchives {
     repositories {
         mavenDeployer {
+            repository(url: mavenLocal().url)
+            pom.groupId = rootProject.group
+            pom.artifactId = project.name
+            pom.version = rootProject.version
+        }
+/*        mavenDeployer {
             repository(url: "${nexusUrl}/repository/smartspaces-io-release/") {
                 authentication(userName: nexusUsername, password: nexusPassword)
 	    }
             snapshotRepository(url: "${nexusUrl}/repository/smartspaces-io-snapshot/") {
                 authentication(userName: nexusUsername, password: nexusPassword)
 	    }
-	}
+	}*/
     }
 }
 
